# stackwalker

./: .activate  .created.yml  .env  .gitignore  .init_workspace  .prettierrc  CHANGELOG.md  LICENSE  README.md  dev-requirements.txt  frame_info.code-workspace  pyproject.toml  requirements.txt  stackwalker.code-workspace  todo.txt
src/frame_info/: __init__.py  frame_info.py  main.py
src/frame_info/.gim/: meta.yml  project.yml
src/stackwalker/: stackwalker.py
tests/: base_test_class.py  shared_test_methods.py  test_frame_info.py  test_stackwalker.py
