[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stackwalker"
authors = [{ name = "Joni Töyrylä", email = "info@jonitoyryla.eu" }]
version = "0.3.0"
description = ""
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools]
# Set true if want to include package data
# include-package-data = true
include-package-data = false

[tool.setuptools.package-data]
# Data folders included in the package
# Example: stackwalker = ["data/**/*", ".gim/**/*"]
stackwalker = []

[project.scripts]
# Script to run the application
# Example: stackwalker = "stackwalker.main:main"

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.3.0"
version_files = ["pyproject.toml:^version"]
tag_format = "$version"
update_changelog_on_bump = true
style = [
    [
        "qmark",
        "fg:#ff9d00 bold",
    ],
    [
        "question",
        "bold",
    ],
    [
        "answer",
        "fg:#ff9d00 bold",
    ],
    [
        "pointer",
        "fg:#ff9d00 bold",
    ],
    [
        "highlighted",
        "fg:#ff9d00 bold",
    ],
    [
        "selected",
        "fg:#cc5454",
    ],
    [
        "separator",
        "fg:#cc5454",
    ],
    [
        "instruction",
        "",
    ],
    [
        "text",
        "",
    ],
    [
        "disabled",
        "fg:#858585 italic",
    ],
]

[tool.black]
extend-exclude = '''
    (
        tests/fixtures/*
        | dist/*
    )
'''
target-version = ['py310']
line-length = 88
